--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <nav>
+  <button (click)="onSave()">Save</button>
+  <button (click)="onOpen()">Open</button>
+  <button (click)="onCopy()">Copy</button>
+  <button (click)="onPaste()">Paste</button>
 </nav>
 
 <app-canvas></app-canvas>
